<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_profil"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_item_photo"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginBottom="20dp"

                android:src="@drawable/karikatura" />
        </FrameLayout>

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:textAlignment="center"
            android:textSize="50dp"
            android:textStyle="bold"
            android:textColor="@color/colorText"
            android:ellipsize="end"
            android:text="@string/username" />

        <TextView
            android:id="@+id/tv_fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:textAlignment="center"
            android:textColor="@color/colorText"
            android:ellipsize="end"
            android:text="@string/nama_lengkap" />

        <TextView
            android:id="@+id/tv_item_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textAlignment="center"
            android:textColor="@color/colorText"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/email" />

    </LinearLayout>
</ScrollView>